--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="NewsMonkey is a news app which can be used to grab quick daily news bites. If you are interested in news weather, politics and sports news, newsmonkey is for you!"
+      content="NewsToday is a news app which can be used to grab quick daily news bites. If you are interested in news weather, politics and sports news, newsmonkey is for you!"
     />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
